<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="14dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_user_image"
                android:layout_width="280dp"
                android:layout_height="320dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/DialogRoundImage"

                />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:text="@string/first_name"
                android:fontFamily="@font/poppins_bold"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/iv_user_image"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_user_image" />



            <TextView
                android:id="@+id/tv_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/email"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                app:layout_constraintEnd_toEndOf="@+id/tv_user_name"
                app:layout_constraintStart_toStartOf="@+id/tv_user_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />

            <Button
                android:id="@+id/btn_user_dialog_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:text="@string/close"
                app:layout_constraintEnd_toEndOf="@+id/tv_user_email"
                app:layout_constraintStart_toStartOf="@+id/tv_user_email"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_email" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>